[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-ad-review"
version = "1.0.0"
description = "Brand-Safe Ad Review environment for UGC content moderation (OpenEnv)"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.2",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ad_review_env*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["ad_review_env"]
