[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-ad_review_env"
version = "1.0.0"
description = "Brand-Safe Ad Review environment for UGC content moderation (OpenEnv)"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
inference = [
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
server = "ad_review_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["ad_review_env", "ad_review_env.server"]
package-dir = { "ad_review_env" = ".", "ad_review_env.server" = "server" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["ad_review_env"]
